--- a/index.html
+++ b/index.html
@@ -109,13 +109,13 @@
     <div class="left"><a href="#" title="Slides Framework"><svg style="width:82px;height:24px"><use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#logo"></use></svg></a></div>
     <div class="center">
       <ul class="menu">
-        <li><a href="#">Tour</a></li>
-        <li><a href="#">Upgrade</a></li>
-        <li><a href="#">Help</a></li>
-        <li><a href="#">Explore</a></li>
+        <li><a href="#">투어</a></li>
+        <li><a href="#">업그레이드</a></li>
+        <li><a href="#">도움</a></li>
+        <li><a href="#">탐색</a></li>
       </ul>
     </div>
-    <div class="right"><a class="button blue gradient" href="#">Profile</a><a class="button green gradient" href="#">Get App</a></div>
+    <div class="right"><a class="button blue gradient" href="#">프로필</a><a class="button green gradient" href="#">Get App</a></div>
   </div>
   <div class="sections compact hidden">
     <div class="left"><a href="#" title="Slides Framework"><svg style="width:82px;height:24px"><use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#logo"></use></svg></a></div>
@@ -129,19 +129,19 @@
   <div class="content">
     <a href="#" class="logo"><svg width="37" height="30"><use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#logo-icon"></use></svg></a>
     <ul class="mainMenu margin-top-3">
-      <li><a href="#">All Goods</a></li>
-      <li><a href="#">UI Kits</a></li>
-      <li><a href="#">Icons</a></li>
+      <li><a href="#">전체 상품</a></li>
+      <li><a href="#">UI 킷</a></li>
+      <li><a href="#">아이콘</a></li>
       <li><a href="#">Mockups</a></li>
-      <li><a href="#">Toolkit</a></li>
+      <li><a href="#">툴킷</a></li>
     </ul>
     <ul class="subMenu small opacity-8">
       <li><a href="#">Submit Product</a></li>
       <li><a href="#">FAQ</a></li>
-      <li><a href="#">License</a></li>
+      <li><a href="#">라이센스</a></li>
       <li><a href="#">Terms & Conditions</a></li>
-      <li><a href="#">Privacy Policy</a></li>
-      <li><a href="#">Contact Us</a></li>
+      <li><a href="#">개인 정책</a></li>
+      <li><a href="#">우리와 접촉</a></li>
     </ul>
     <ul class="social opacity-8">
       <li><a href="#"><svg><use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#facebook"></use></svg></a></li>
