--- a/index.html
+++ b/index.html
@@ -160,9 +160,9 @@
         <div class="fix-12-12">
           <ul class="flex fixedSpaces verticalCenter reverse">
             <li class="col-6-12 left middle">
-              <h1 class="ae-1 fromLeft">Designers are meant to be loved, not to be understood.</h1>
+              <h1 class="ae-1 fromLeft">httpd 서버로 서비스 중 입니다.</h1>
               <p class="ae-2 fromLeft"><span class="opacity-8">The sudden hunch, the creative leap of mind that “sees” in a flash how to solve a problem in a simple way, is something quite&nbsp;different.</span></p>
-              <a class="button blue gradient ae-3 fromCenter cropLeft">Get Started</a><a class="button white ae-4 fromCenter">Learn more</a>
+              <a class="button blue gradient ae-3 fromCenter cropLeft">시작하기</a><a class="button white ae-4 fromCenter">더 알아보기기</a>
             </li>
             <li class="col-6-12">
               <img class="ae-4" width="605" src="assets/img/iphones-34.png" alt="iPhones Thumbnail" data-action="zoom"/>
@@ -185,10 +185,10 @@
         <div class="fix-12-12">
           <ul class="grid">
             <li class="col-6-12 left">
-              <h1 class="ae-2 fromLeft">Krabi Island</h1>
+              <h1 class="ae-2 fromLeft">카라비 섬</h1>
               <p class="ae-3 fromLeft"><span class="opacity-8">An electrician isn’t an opinion former, but a graphic designer is. My argument is that all graphic designers hold high levels of responsibility in society.</span></p>
               <ul class="tabs controller uppercase bold ae-4 fromCenter" data-slider-id="60-1">
-                <li class="selected">Krabi Island</li>
+                <li class="selected">카라비 섬</li>
                 <li>Community</li>
                 <li>Surfing</li>
               </ul>
